--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -21,10 +21,10 @@
                 search
             </mat-icon>
             <h3 mat-line *ngIf="showFiller">
-                Search
+                Wyszukiwanie
             </h3>
             <p mat-line *ngIf="showFiller">
-                Search by name or category
+                Szukaj po kategorii obiektu
             </p>
         </a>
         <a id="trending_down" mat-list-item>
@@ -32,10 +32,10 @@
                 trending_down
             </mat-icon>
             <h3 mat-line *ngIf="showFiller">
-                Free places
+                Wolne miejsca
             </h3>
             <p mat-line *ngIf="showFiller">
-                Filter by the least crowded
+                Filtruj po najmniej zatłoczonych
             </p>
         </a>
         <a id="trending_up" mat-list-item>
@@ -43,10 +43,10 @@
                 trending_up
             </mat-icon>
             <h3 mat-line *ngIf="showFiller">
-                Crowded places
+                Zatłoczone miejsca
             </h3>
             <p mat-line *ngIf="showFiller">
-                Filter by the most crowded
+                Filtruj po najbardziej zatłoczonych
             </p>
         </a>
         <a id="favorite" mat-list-item>
@@ -54,10 +54,10 @@
                 favorite
             </mat-icon>
             <h3 mat-line *ngIf="showFiller">
-                Favorite
+                Ulubione
             </h3>
             <p mat-line *ngIf="showFiller">
-                Filter by your favoritest
+                Filtruj po ulubionych
             </p>
         </a>
     </mat-nav-list>
@@ -66,13 +66,13 @@
         <a id="refresh" mat-list-item>
             <mat-icon mat-list-avatar>refresh</mat-icon>
             <h3 mat-line *ngIf="showFiller">
-                Refresh
+                Odśwież dane
             </h3>
         </a>
         <a id="exit" mat-list-item>
             <mat-icon mat-list-avatar>login</mat-icon>
             <h3 mat-line *ngIf="showFiller">
-                Login
+                Zaloguj się
             </h3>
         </a>
     </mat-nav-list>
