--- a/src/app/search/search.component.scss
+++ b/src/app/search/search.component.scss
@@ -4,19 +4,65 @@
 
     #search-fields {
         height: fit-content;
-        margin-left: 1.5%;
-        // width: 100%;
+        padding-left: 1.5%;
+        padding-right: 1.5%;
+        position: -webkit-sticky; /* Safari */
+        position: sticky;
+        background-color: white;
+        top: 0;
+        z-index: 1;
 
         #place-name {
+            float: left;
+            width: 66%;
+
+        }
+        #place-category {
+            float: right;
+            width: 33%;
         }
     }
 
     .mat-grid-list {
         margin-left: 1%;
         margin-right: 1%;
+
         .mat-card {
             width: 90%;
-            height: 85%;
+            height: 92%;
+            border-radius: 0;
+            cursor: pointer;
+
+            .mat-card-content {
+                height: 12%;
+            }
+
+            img {
+                height: 60%;
+            }
+
+            .mat-card-actions {
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                
+                .mat-progress-bar {
+                    width: 70%;
+                    margin-top: 4%;
+                    margin-left: 2%;
+                }
+
+                p {
+                    margin-top: 2%;
+                }
+
+                .material-icons {
+                    font-size: 36px;
+                    cursor: pointer;
+                    margin-right: 6%;
+                    margin-top: 0;
+                }
+            }
         }
     }
 }
