Added place details view

--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -48,7 +48,7 @@
             </mat-card>
         </mat-grid-tile>
         <mat-grid-tile>
-            <mat-card class="mat-elevation-z2">
+            <mat-card class="mat-elevation-z2" (click)="openPlaceDetailsDialog()">
                 <mat-card-header>
                     <mat-card-title>Cybermachina</mat-card-title>
                     <mat-card-subtitle>Bar</mat-card-subtitle>
