--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
       </app-sidenav>
     </mat-drawer>
     <div class="sidenav-container">
-      <app-search></app-search>
+      <router-outlet></router-outlet>
     </div>
   </mat-drawer-container>
 </body>
