--- a/src/app/place-details/place-details.component.html
+++ b/src/app/place-details/place-details.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="isSpinnerDisplayed" class="spinner-wrapper">
     <mat-spinner></mat-spinner>
 </div>
-<div id="place-details-container">
+<div id="place-details-container" class="dialog-responsive">
     <div id="modal-top">
         <button id="close" mat-icon-button (click)="closeDialog()">
             <mat-icon class="material-icons">close</mat-icon>
