administratorService and openinghours on add place

--- a/src/app/components/add-place/add-place.component.html
+++ b/src/app/components/add-place/add-place.component.html
@@ -3,7 +3,7 @@
         <mat-spinner color="accent"></mat-spinner>
     </div>
     <div id="modal-top">
-        <h2 class="mat-h2"> Edytuj miejscówkę </h2>
+        <h2 class="mat-h2"> Dodaj nową miejscówkę </h2>
         <button id="close" mat-icon-button (click)="closeDialog()">
             <mat-icon class="material-icons">close</mat-icon>
         </button>
@@ -33,7 +33,7 @@
               </mat-form-field>
 
 
-            <table class="example-full-width" cellspacing="0"><tr>
+            <table class="address-table" cellspacing="0"><tr>
 
                 <td><mat-form-field class="full-width-input" appearance="outline" color="accent">
                 <mat-label> Ulica </mat-label>
@@ -51,17 +51,76 @@
             </tr></table>
 
             <table class="example-full-width" cellspacing="0"><tr>
-                <td>
-                <mat-label> Poniedziałek od </mat-label>
-                <app-duration-editor-search-form formControlName="mondayFrom"
-                    id="min-deviation">
-                </app-duration-editor-search-form>
-            </td>
-            <td>
-                <mat-label> Poniedziałek do </mat-label>
-                <app-duration-editor-search-form formControlName="mondayTo"
-                id="min-deviation">
-            </app-duration-editor-search-form></td>
+                <td class="day-of-week">
+                    <div class="one-line">
+                        <mat-label class="day-label"> Poniedziałek od: &nbsp;</mat-label>
+                        <ngx-mat-timepicker formControlName="mondayFrom" [showSpinners]="false"></ngx-mat-timepicker>
+                    </div>
+                    <div class="one-line">
+                        <mat-label class="day-label"> Poniedziałek do: &nbsp;</mat-label>
+                        <ngx-mat-timepicker formControlName="mondayTo" [showSpinners]="false"></ngx-mat-timepicker>
+                    </div>
+                </td>
+                <td class="day-of-week">
+                    <div class="one-line">
+                        <mat-label class="day-label"> Wtorek od: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
+                        <ngx-mat-timepicker formControlName="tuesdayFrom" [showSpinners]="false"></ngx-mat-timepicker>
+                    </div>
+                    <div class="one-line">
+                        <mat-label class="day-label"> Wtorek do: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
+                        <ngx-mat-timepicker formControlName="tuesdayTo" [showSpinners]="false"></ngx-mat-timepicker>
+                    </div>
+                </td>
+                <td class="day-of-week">
+                    <div class="one-line">
+                        <mat-label class="day-label"> Środa od: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
+                        <ngx-mat-timepicker formControlName="wednesdayFrom" [showSpinners]="false"></ngx-mat-timepicker>
+                    </div>
+                    <div class="one-line">
+                        <mat-label class="day-label"> Środa do: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
+                        <ngx-mat-timepicker formControlName="wednesdayTo" [showSpinners]="false"></ngx-mat-timepicker>
+                    </div>
+                </td>
+                <td class="day-of-week">
+                    <div class="one-line">
+                        <mat-label class="day-label"> Czwartek od: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
+                        <ngx-mat-timepicker formControlName="thursdayFrom" [showSpinners]="false"></ngx-mat-timepicker>
+                    </div>
+                    <div class="one-line">
+                        <mat-label class="day-label"> Czwartek do: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
+                        <ngx-mat-timepicker formControlName="thursdayTo" [showSpinners]="false"></ngx-mat-timepicker>
+                    </div>
+                </td>
+                <td class="day-of-week">
+                    <div class="one-line">
+                        <mat-label class="day-label"> Piątek od: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
+                        <ngx-mat-timepicker formControlName="fridayFrom" [showSpinners]="false"></ngx-mat-timepicker>
+                    </div>
+                    <div class="one-line">
+                        <mat-label class="day-label"> Piątek do: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
+                        <ngx-mat-timepicker formControlName="fridayTo" [showSpinners]="false"></ngx-mat-timepicker>
+                    </div>
+                </td>
+                <td class="day-of-week">
+                    <div class="one-line">
+                        <mat-label class="day-label"> Sobota od: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
+                        <ngx-mat-timepicker formControlName="saturdayFrom" [showSpinners]="false"></ngx-mat-timepicker>
+                    </div>
+                    <div class="one-line">
+                        <mat-label class="day-label"> Sobota do: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
+                        <ngx-mat-timepicker formControlName="saturdayTo" [showSpinners]="false"></ngx-mat-timepicker>
+                    </div>
+                </td>
+                <td class="day-of-week">
+                    <div class="one-line">
+                        <mat-label class="day-label"> Niedziela od: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
+                        <ngx-mat-timepicker formControlName="sundayFrom" [showSpinners]="false"></ngx-mat-timepicker>
+                    </div>
+                    <div class="one-line">
+                        <mat-label class="day-label"> Niedziela do: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</mat-label>
+                        <ngx-mat-timepicker formControlName="sundayTo" [showSpinners]="false"></ngx-mat-timepicker>
+                    </div>
+                </td>
             </tr></table>
 
             <div class="button-wrapper">
